--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,14 @@
  :root {
    /* Background */
   --color-bg-main: #020617;
-  --color-bg-secondary: #0206179f;
 
   /* Text */
   --color-text-primary: #E5E7EB;
   --color-text-secondary: #9CA3AF;
+  --color-text-secondary-2: #7b7b7b6f;
 
   /* Accents */
-  --color-accent: #FBBF24;      /* yellow */
+  --color-accent: #e0ca38;      /* yellow */
   --color-accent-alt: #38BDF8;  /* blue */
 
   /* Borders / lines */
@@ -16,8 +16,7 @@
 
      /* FONT FAMILIES */
   
-  --font-heading: 'Space Grotesk', sans-serif;
-  --font-body: 'Inter', sans-serif;
+  --font-body: 'Satoshi', system-ui, -apple-system, BlinkMacSystemFont, sans-serif;
 
  
      /* FONT WEIGHTS */
@@ -50,20 +49,37 @@ body {
     color: var(--color-text-primary);
 }
 
-.intro {
+
+.hero {
     background:
     linear-gradient(to right, rgba(2,6,23,0.85), rgba(2,6,23,0.6)),
     url("./images/backgroug-desktop.jpg");
     background-size: cover;
     background-position: center;
-    width: 100%;
     min-height: 100vh;
-    position: relative;
     display: flex;
+    flex-direction: column;
+
 }
 
-header {
-    background-color: transparent;
+.hero > .container {
+  display: flex;
+  align-items: center;
+  flex: 1;
+}
+
+.navbar-nav li {
+    padding-left: 2em;
+    padding-right: 0;
+}
+
+.navbar-nav li a {
+    font-weight: var(--font-semibold);
+    text-align: right;
+}
+
+.navbar-brand {
+    font-weight: var(--font-bold);
 }
 
 .navbar-brand, .nav-link {
@@ -74,47 +90,175 @@ header {
 .nav-link:hover {
     color: var(--color-text-secondary) !important;
 }
+
+.fa-bars {
+    font-size: 30px !important;
+    padding: 0;
+    text-align: right;
+}
 .navbar-toggler {
     border: none !important;
     color: var(--color-text-primary) !important;
-    border-radius: 0.5rem;
-    padding: 0.5rem 0.75rem;
-    transition: background-color 0.3s;
-    outline: none !important;
-    box-shadow: none !important;
-  }
-
-  .navbar-toggler-icon {
-  filter: invert(1);
-}
-
-.navbar-toggler:hover {
-    background-color: var(--color-accent-alt) !important;
+    padding: 0;
+    
   }
 
 .navbar-toggler:focus {
     box-shadow: none;
   } 
 
-  img {
-    40%
+  .hero-image {
+     display: flex;
+     justify-content: center;
+     align-items: flex-end;
   }
+
+  .img-fluid {
+    max-width: 100%;
+    height: auto;
+    position: relative;
+    z-index: 1;
+    transform: translateY(60px);
+    /* padding-top: 1em; */
+  }
+
+  @media (min-width: 992px) {
+  .img-fluid {
+    max-width: 80%;
+  }
+
+}
+  .hero-content {
+    /* text-align: right; */
+    padding-top: 4em;
+    
+  }
+
+  .hero-content h1 {
+    letter-spacing: 1px;
+    display: flex;
+  }
+
+
+  .hero-content p {
+    padding-bottom: 0.75em;
+  }
+
+
+  .intro-text {
+    position: relative;
+    letter-spacing: 2px;
+    display: inline-block;
+    padding-bottom: 0 !important;
+    padding-left: 2rem;
+
+  }
+
+
+  .intro-text::before {
+    content: "";
+    width: 4px;
+    left: 0;
+    height: 100%;
+    border-radius: 3px;
+    background-color: var(--color-accent);
+    position: absolute;
+  }
+
+  
+       
+  .role {
+    margin-top: 16px;
+    font-size: var(--text-3xl) !important;
+    font-weight: var(--font-bold);
+    letter-spacing: 3px;
+  }
+
 
   .tools-list {
     width: 100%;
-    position: absolute;
-    bottom: 0;
     padding: 1em;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    background-color: var(--color-bg-secondary);
+    display: grid;
+    grid-auto-flow: column;
+    grid-auto-columns: 1fr;
+    gap: 1rem;
+    text-align: center;
+    background-color: var(--color-bg-main);
     font-size: var(--text-lg);
     font-weight: var(--font-bold);
-    color: var(--color-text-secondary);
+    color: var(--color-text-secondary-2);
+    margin-top: auto;
+    position: relative;
+    z-index: 1;
   }
 
-.hero {
-    display: flex;
-    justify-content: space-between;
-}
+
+ @media (max-width: 800px) {
+
+        .hero {
+            background:
+            linear-gradient(to right, rgba(2,6,23,0.85), rgba(2,6,23,0.6)),
+            url("./images/backgroud-mobile.jpg");
+            background-size: cover;
+            background-position: center;
+            height: 100vh;
+   
+        }
+
+        .hero-content {
+            width: 100%;
+            height: 40%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .hero-content p {
+            padding-left: 0;
+            font-size: var(--text-xl) !important;
+            text-align: center;
+            font-weight: var(--font-bold);
+        }
+
+           .hero-content h1 {
+            display: flex;
+            font-weight: var(--font-bold);
+            padding-left: 0;
+            margin-bottom: 12px !important;
+            font-size: var(--text-xl) !important;
+        }
+
+        
+        .intro-text {
+            
+        }
+
+          .intro-text::before {
+           left: -10px;
+        }
+
+          .intro-text::after {
+            content: "";
+            width: 4px;
+            right: -10px;
+            bottom: 0;
+            height: 100%;
+            border-radius: 3px;
+            background-color: var(--color-accent);
+            position: absolute;
+        }
+        /* .img-fluid {
+             width: 100%;
+             height: auto;
+        } */
+
+  
+
+         .tools-list {
+            grid-auto-flow: row;
+            grid-template-columns: repeat(2, 1fr);
+         }
+
+
+        }
